--- a/Public/library.css
+++ b/Public/library.css
@@ -1,12 +1,3 @@
-.jumbotron{
-    background-color:black;
-}
-
-#lib_pic{
-    width:240px; 
-    height: 180px;
-    float: left;
-}
 
 header{
     background-color: black;
@@ -25,16 +16,6 @@ header h1{
     color: white;
 }
 
-.lib_pic {
-    width: 1200px;
-    height: 600px;
-}
-
-.slider img {
-    display: block;
-    margin: 0px auto 0px auto;
-}
-
 a:hover{
     display: inline-block;
     background-color: white;
@@ -45,14 +26,7 @@ a:hover{
     background-color: black;
     text-align: center;
     color: gold;
-}
-
-#login, #signup, #editprofile, #editadmin, #editbook, #insert, #edit, #insertbook{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
+    height:80px;
 }
 
 body{
@@ -66,4 +40,36 @@ header a{
 
 #minh{
     min-height: 400px;
+    padding: 2em;
+}
+
+#demo{
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.bottom-right {
+    position: absolute;
+    bottom: 8px;
+    right: 16px;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.table-responsive{
+    padding: 2em;
+}
+
+#login, #signup, #editprofile, #editadmin, #editbook, #insert, #edit, #insertbook{
+    padding:2em 1em 1em;
+    background-color: lightblue;
+    border-radius: 10px;
+    max-width: 500px;
+    margin:1em auto;
 }
